--- a/views/movies.html
+++ b/views/movies.html
@@ -5,7 +5,7 @@
 % if user_movies:
     % for ratings, movies in user_movies:
         <div>
-            <p>${movies.movie_name}</p> - ${ratings.rating}
+            <p>${movies.movie_name} - ${ratings.rating}</p>
         </div>
     % endfor
 % else:
